Multi-tier-app/K8s-manifest/backend-deployment.yaml
# k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: multi-tier
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: multi-tier-backend:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 5000
