Multi-tier-app/K8s-manifest/frontend-deployment.yaml
# k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: multi-tier
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: multi-tier-frontend:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 80
