Multi-tier-app/K8s-manifest/backend-service.yaml
# k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: multi-tier
spec:
  selector:
    app: backend
  ports:
    - port: 5000
